# switch-env

./: .gitignore  Cargo.toml  IMPLEMENTATION_COMPLETE.md  README.md  REFACTORING_SUMMARY.md  SHELL_INTEGRATION_CN.md  demo.sh  envswitch-wrapper.sh  envswitch_export.json  install-shell-integration.sh  new_config.env  shell-integration.fish  shell-integration.sh  test_export.env  test_export_fixed.env
.github/workflows/: ci.yml  release.yml
.kiro/specs/env-config-switcher/: design.md  requirements.md  tasks.md
.kiro/specs/missing-features-implementation/: design.md  requirements.md  tasks.md
docs/: best-practices.md  ci-cd-guide.md  error-messages.md  examples.md  troubleshooting.md  usage-guide.md
fixtures/: sample_config.json
scripts/: release.sh
src/: cli.rs  config.rs  env.rs  error.rs  lib.rs  main.rs  shell.rs  types.rs
src/commands/: config_commands.rs  import_export.rs  mod.rs  router.rs  shell_commands.rs  tutorial_commands.rs
src/handlers/: display.rs  error_handling.rs  interactive.rs  mod.rs  startup.rs  validation.rs
src/utils/: feedback.rs  file_utils.rs  helpers.rs  mod.rs
tests/: command_workflow_tests.rs  error_scenario_tests.rs  integration_tests.rs  missing_features_tests.rs  shell_compatibility_tests.rs
